# tag-suite

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
lib/filters/: img_horizontal  img_square  img_vertical
lib/pipes/: img_horizontal  img_square  img_vertical
lib/queries/: associated_files.sql  associated_files_ranking.sql  associated_tags.sql  associated_tags_ranking.sql  average_number_of_files.sql  average_number_of_tags.sql  average_path_length.sql  average_tag_length.sql  files_and_tags.sql  joined_tables.sql  number_of_files_per_tag.sql  number_of_tags_per_file.sql
migrations/2019-09-18-005721_init/: down.sql  up.sql
src/: lib.rs
src/app/: mod.rs
src/app/attr/: file.rs  mod.rs  tag.rs
src/app/data/: mod.rs
src/app/data/query/: collect.rs  filter.rs  iter.rs  maps.rs  mod.rs  state.rs
src/app/data/tag/: mod.rs  state.rs
src/app/data/update/: diff.rs  mod.rs  scan.rs  state.rs
src/app/meta/: action.rs  command.rs  config.rs  mod.rs  template.rs
src/db/: connection.rs  mod.rs  schema.rs
src/dsl/: mod.rs
src/dsl/combinator/: dsl.rs  mod.rs
src/dsl/filter/: context.rs  dsl.rs  mod.rs
src/dsl/query/: context.rs  dsl.rs
src/expression/: comparison.rs  expansion.rs  expression.rs  logic.rs  mod.rs  namespace.rs  parser.rs  tokenizer.rs
src/model/: file.rs  file_tag.rs  mod.rs  tag.rs
src/util/: arg.rs  collections.rs  error.rs  file.rs  math.rs  mod.rs  profiler.rs  rc.rs  sql.rs  string.rs
test/: create-files.sh
test/tag/: config.yaml  db.sqlite
